# starnavi_test_task

./: .gitignore  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: a34cbf8fc8bc_add_assos_table.py
tests/: conftest.py  test_graph.py  test_repository.py  test_routers.py
workflow/: Dockerfile  api.py  listeners.py
workflow/db/: models.py  repository.py  schemas.py
workflow/graphs/: graph.py  graph_create.py
workflow/routers/: dependencies.py  edge.py  node.py  workflow.py
workflow/settings/: configs.py  constants.py  exceptions.py
